# libuseless

./: .gitignore  LICENSE  Makefile.am  README  configure.ac  libuseless.pc.in  noreturn.c  noreturn.h  noreturn.pod  spinner.c  spinner.h  spinner.pod
doc/: .gitignore  Makefile.am  fnprime.pod  frand.pod  fspinner.pod  noreturn.pod  prime.pod
src/: .gitignore  Makefile.am  noreturn.c  noreturn.h  spinner.h
